force-app/main/default/objects/NAF__c/NAF__c.object-meta.xml
<CustomObject>
    <description>Une table de référence NAF/Code APE</description>
    <label>NAF</label>
    <nameField>
        <label>Nom de NAF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>