force-app/main/default/objects/NAF__c/fields/CODE_APE__c.field-meta.xml
<CustomField>
    <fullName>CODE_APE__c</fullName>
    <externalId>true</externalId>
    <label>CODE APE</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>