force-app/main/default/objects/NAF__c/fields/Code_NACE__c.field-meta.xml
<CustomField>
    <fullName>Code_NACE__c</fullName>
    <label>Code NACE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>