force-app/main/default/objects/NAF__c/fields/Portefeuille_Employabilit_Th_orique__c.field-meta.xml
<CustomField>
    <fullName>Portefeuille_Employabilit_Th_orique__c</fullName>
    <description>Répartition NAF par portefeuille pour Employabilité</description>
    <inlineHelpText>Affectation portefeuille par défaut pour Employabilité</inlineHelpText>
    <label>Portefeuille Employabilité Théorique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>