force-app/main/default/objects/NAF__c/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <label>Secteur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>