force-app/main/default/objects/NAF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Code_NACE__c</columns>
    <columns>CODE_APE__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>